--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <h1>Sai Tejashwin</h1>
             <h2>saitejashwin@gmail.com</h2>
             <h3>7569371209</h3>
+            <h4>LinkedIn -> <a href="https://www.linkedin.com/in/sai-tejashwin-goud-pypati-7a2175259?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Link</a></h4>
+            <h4>Resume -> <a href="https://drive.google.com/file/d/1Fvedimi3ycvlM6ibzoxvNgBy1uMIDA1q/view?usp=drivesdk">Link</a></h4>
         </div>
 
 
@@ -28,7 +30,6 @@
                     </div>
                     <div class="rdet">
                         <p>BV Raju Institute of Technology</p>
-                        <p>CGPA: 7.63</p>
                     </div>
                 </div>
                 <div class="details">
@@ -38,7 +39,6 @@
                     </div>
                     <div class="rdet">
                         <p>Sri Chaitanya Junior College</p>
-                        <p>Percentage: 87.6</p>
                     </div>
                 </div>
                 <div class="details">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="rdet">
                         <p>Sri Swamy Narayana Gurukul International School</p>
-                        <p>Percentage: 69</p>
+
                     </div>
                 </div>
             </div>
@@ -74,6 +74,19 @@
                         <!-- <p>CGPA: 7.63</p> -->
                     </div>
                 </div>
+                <div class="details">
+                    <div class="rdet">
+                        <h3>SRI BALAJI ARCHITECTURE</h3>
+                        <p class="location">Intern Under Guidance of Architect</p>
+                    </div>
+                    <div class="rdet">
+                        <ul>
+                            <li>Leanrt Sketchup, Lumion softwares and Interior design.</li>
+                            </li>
+                            <li>During the internship I had learned the importance of professional etiquette and how to conduct myself in a workplace
+                                setting. This includes punctuality, effective communication, and attention to detail.</li>
+                            <li>Gained practical experience in architectural design and visualization.Participated in client meetings and presentations, learning how to interpret client requirements and feedback.</li>
+                </div>
             </div>
             <br>
             <div class="projects">
@@ -97,31 +110,52 @@
                         <!-- <p>CGPA: 7.63</p> -->
                     </div>
                 </div>
+                <div class="details">
+                    <div class="rdet">
+                        <h3>Design Analysis and Cost Comparison of a Building (BIM vs Manual Method)</h3>
+                        <!-- <p class="location">Narsapur</p> -->
+                    </div>
+                    <div class="rdet">
+                        <ul>
+                            <li>By using the BIM Softwares We have Designed the Building with the Architecture, Structure and Pulmbing.</li>
+                            <li>We have caluculated the cost estimation by using BIM and Manual Estimation And Costing method.</li>
+                            </li>
+                            <li>We have compared the BIM estimation cost and Manual method estimation cost.
+                </div>
             </div>
             <br>
-            <div class="excess-work">
+            <div class="Architecture Designs">
                 <div class="container2">
-                    <h1>Excess Work</h1>
+                    <h1>Architecture Designs</h1>
                 </div>
                 <div class="details">
                     <div class="rdet">
-                        <h3>Duplex house plan</h3>
+                        <h3>House design</h3>
                         <!-- <p class="location">Narsapur</p> -->
                     </div>
                     <div class="rdet">
-                        <p>To check out the work please click here -> <a href="https://drive.google.com/file/d/1uc2Wn6tpPjHLF8n_JQrvZvJa0TPanygv/view?usp=drivesdk">Link</a></p>
+                        <p>To check out the work please click here -> <a href="https://drive.google.com/file/d/1KzMJuoQpWlFago8aNptCGIR_Q_30yHlY/view?usp=drivesdk">Link</a></p>
                         <!-- <p>CGPA: 7.63</p> -->
                     </div>
                 </div>
                 <div class="details">
                     <div class="rdet">
-                        <h3>Structural template for a house</h3>
+                        <h3>Guduru staff guest house design</h3>
                         <!-- <p class="location">Narsapur</p> -->
                     </div>
                     <div class="rdet">
-                        <p>To check out the work please click here -> <a href="https://drive.google.com/file/d/1V1_yrILKdwUmkys-uYQFPe75pvZGP6xg/view?usp=drivesdk">Link</a></p>
+                        <p>To check out the work please click here -> <a href="https://drive.google.com/file/d/1k_BBoj69BJqoCl-AhS9b7MVLSRL9iiqV/view?usp=drivesdk">Link</a></p>
                         <!-- <p>CGPA: 7.63</p> -->
                     </div>
+                </div>
+                <div class="details">
+                    <div class="rdet">
+                        <h3>individual house design</h3>
+                        <!-- <p class="location">Narsapur</p> -->
+                    </div>
+                    <div class="rdet">
+                        <p>To check out the work please click here -> <a href="https://drive.google.com/file/d/1VeLRiLagCdGahi3Pwj4PMHiQ7Lo5c4wM/view?usp=sharing">Link</a></p>
+
                 </div>
             </div>
             <br>
@@ -141,7 +175,7 @@
                 </div>
                 <div class="details">
                     <div class="rdet">
-                        <h3>Certification on BIM Manager: Managing Revit from the LinkedIn platform</h3>
+                        <h3>Certification on BIM Manager: Managing Revit</h3>
                         <!-- <p class="location">Narsapur</p> -->
                     </div>
                     <div class="rdet">
@@ -151,7 +185,7 @@
                 </div>
                 <div class="details">
                     <div class="rdet">
-                        <h3>Certification on learning Revit 2021 from the LinkedIn platform</h3>
+                        <h3>Certification on learning Revit 2021</h3>
                         <!-- <p class="location">Narsapur</p> -->
                     </div>
                     <div class="rdet">
@@ -161,7 +195,7 @@
                 </div>
                 <div class="details">
                     <div class="rdet">
-                        <h3>Certification on learning AutoCAD from the LinkedIn platform</h3>
+                        <h3>Certification on learning AutoCAD</h3>
                         <!-- <p class="location">Narsapur</p> -->
                     </div>
                     <div class="rdet">
